# chernobog

./: .gitignore  CMakeLists.txt  README.md
src/common/: compat.h  simd.h
src/deobf/: deobf_main.cpp  deobf_main.h  deobf_types.h  deobf_utils.cpp
src/deobf/analysis/: arch_utils.cpp  ast.h  ast_builder.h  cfg_analysis.cpp  mop_utils.h  pattern_match.cpp  pattern_storage.h  stack_tracker.cpp  stack_tracker.h
src/deobf/handlers/: block_merge.cpp  bogus_cf.cpp  const_decrypt.cpp  ctree_const_fold.cpp  ctree_const_fold.h  ctree_indirect_call.cpp  ctree_indirect_call.h  ctree_string_decrypt.cpp  ctree_string_decrypt.h  ctree_switch_fold.cpp  ctree_switch_fold.h  deflatten.cpp  deflatten.h  global_const.cpp  hikari_wrapper.cpp  identity_call.cpp  identity_call.h  indirect_branch.cpp  indirect_call.cpp  indirect_call.h  jump_optimizer.cpp  mba_simplify.cpp  objc_resolve.cpp  peephole.cpp  ptr_resolve.cpp  ptr_resolve.h  savedregs.cpp  stack_string.cpp  string_decrypt.cpp  unflattener_base.cpp  unflattener_base.h
src/deobf/rules/: jump_rules.cpp  jump_rules.h  pattern_rule.cpp  pattern_rule.h  rule_registry.cpp  rule_registry.h  rules_add.h  rules_and.h  rules_misc.h  rules_or.h  rules_predicate.cpp  rules_predicate.h  rules_sub.h  rules_xor.h
src/plugin/: component_registry.cpp  deobf_plugin.cpp
tests/: run_tests.sh  test_components.sh  test_individual_functions.sh
tests/string_obfuscation/: test_strings.c
